# btc_notifier

./: Dockerfile  TODO  main.py  notofications.py  pyproject.toml  readme.md
coinranking/: __init__.py  coinranking_api.py  rates_api.py
statistics_func/: __init__.py  statistics.py
